testsuite/tests/deriving/should_fail/T21087b.hs
module T21087b where

import {-# SOURCE #-} T21087b_aux
